navigation and intro

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Matt Rothstein - Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,6 +14,82 @@
 </head>
 
 <body>
-  <h1>My Resume  </h1>
+  <div class="container">
+
+    <header>
+      <nav>
+          <a href="index.html">Home</a>
+          <a href="#">About</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Contact</a>
+      </nav>
+    </header>
+
+    <section class="top-content">
+      <img src="https://i.imgur.com/jEuljup.jpg" alt="picture of matt rothstein" class="me">
+
+      <div class="name">
+          <h1>Matt Rothstein - Web Dev</h1>
+          <p>Technology is my jam!</p>
+      </div>
+
+      <div class="cta">
+          <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this website.</p>
+          <button>Let's Team Up</button>
+      </div>
+    </section>
+
+    <section class="middle-content">
+      <div class="listen-up">
+        <h2>Listen Up...</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam eveniet excepturi quo, voluptatem a magni! Doloribus, quaerat natus libero nemo sunt, itaque veritatis veniam alias vel provident consequuntur id sint?</p>
+      </div>
+
+      <div class="stuff-good">
+        <h3>Stuff I'm Good At:</h3>
+        <p>Disc Golf</p>
+        <p>Coding up UI</p>
+        <p>Playing lots of video games</p>
+        <p>Using bootstrap grid</p>
+        <p>Taking long naps</p>
+      </div>
+    </section>
+
+    <section class="bottom-content">
+      <div class="work-history">
+        <h3>Work History</h3>
+      </div>
+      <div class="yrs">
+        <p>Yrs</p>
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+      </div>
+      <div class="company">
+        <p>Company</p>
+        <p>Apple</p>
+        <p>Microsoft</p>
+        <p>Amazon</p>
+      </div>
+      <div class="title">
+        <p>Title</p>
+        <p>Software Engineer</p>
+        <p>Computer Scientist</p>
+        <p>Dev Ops</p>
+      </div>
+      <div class="tech-used">
+        <p>Tech Used</p>
+        <p>Swift</p>
+        <p>.NET</p>
+        <p>AWS</p>
+      </div>
+    </section>
+
+    <footer>
+      <p>Copyright Awesomeness 2019</p>
+    </footer>
+
+  </div><!-- container -->
+
 </body>
 </html>
