--- a/index.html
+++ b/index.html
@@ -59,30 +59,33 @@
       <div class="work-history">
         <h3>Work History</h3>
       </div>
-      <div class="yrs">
-        <p>Yrs</p>
-        <p>1</p>
-        <p>2</p>
-        <p>3</p>
-      </div>
-      <div class="company">
-        <p>Company</p>
-        <p>Apple</p>
-        <p>Microsoft</p>
-        <p>Amazon</p>
-      </div>
-      <div class="title">
-        <p>Title</p>
-        <p>Software Engineer</p>
-        <p>Computer Scientist</p>
-        <p>Dev Ops</p>
-      </div>
-      <div class="tech-used">
-        <p>Tech Used</p>
-        <p>Swift</p>
-        <p>.NET</p>
-        <p>AWS</p>
-      </div>
+      
+      <table>
+        <tr>
+          <th>Yrs</th>
+          <th>Company</th>
+          <th>Title</th>
+          <th>Tech Used</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Apple</td>
+          <td>Software Egineer</td>
+          <td>Swift</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Microsoft</td>
+          <td>Computer Scientist</td>
+          <td>.NET</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Amazon</td>
+          <td>Dev Ops</td>
+          <td>AWS</td>
+        </tr>
+      </table>
     </section>
 
     <footer>
