contact me added

--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
           <td>AWS</td>
         </tr>
       </table>
+
+      <div class="contact">
+        <h3>Contact Me:</h3>
+        <p>Email: 
+          <a href="mailto:matt.rothstein21@gmail.com">matt.rothstein21@gmail.com</a></p>
+        <p>Phone: 
+          <a href="tel:210-437-9157">(310) 437-9157</a></p>
+      </div>
     </section>
 
     <footer>
