Added media queries  -  MVP complete

--- a/index.html
+++ b/index.html
@@ -26,16 +26,27 @@
     </header>
 
     <section class="top-content">
-      <img src="https://i.imgur.com/jEuljup.jpg" alt="picture of matt rothstein" class="me">
+      <div class="img">
+          <img src="https://i.imgur.com/jEuljup.jpg" alt="picture of matt rothstein" class="me">
+      </div>
 
       <div class="name">
           <h1>Matt Rothstein - Web Dev</h1>
           <p>Technology is my jam!</p>
       </div>
 
+      <div class="mobile-name">
+          <h1>Matt Rothstein</h1>
+          <h1>Web Dev</h1>
+          <p>Technology is my jam!</p>
+      </div>
+
       <div class="cta">
           <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this website.</p>
-          <button>Let's Team Up</button>
+          
+          <div class="cta-button">
+              <button>Let's Team Up</button>
+          </div>
       </div>
     </section>
 
